프로토 타입 알아보기

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,10 +9,15 @@
 </head>
 
 <body>
-    haha
     <script>
-        var a = "123";
-        console.log(a);
+        var a = {
+            a: 110,
+            b: "hello",
+            c: function() {
+                console.log("gggg");
+            },
+        };
+        console.log(a.a);
     </script>
 </body>
 
