--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,18 +9,24 @@
 </head>
 
 <body>
-    숫자 :
-    <div id="num"></div>
-    <button id="plus">증가</button>
     <script>
-        var num = 1;
-        document.addEventListener("DOMContentLoaded", function() {
-            document.querySelector("#num").innerHTML = num;
-        });
-        document.querySelector("#plus").addEventListener("click", function() {
-            num++;
-            document.querySelector("#num").innerHTML = num;
-        });
+        const func1 = (a, b) => a + b;
+        console.log(func1(1, 2));
+        //배열에서의 인덱스
+        const [d, e, f] = [1, 2, 3];
+        console.log(e);
+        //spread 연산자
+
+        const arr1 = [1, 2];
+        const arr2 = [3, 4, 5];
+        const arr3 = [...arr1, ...arr2];
+        console.log(arr3);
+
+        // 인자를 가변적으로 만들 때 좋음
+        function abc(a, ...b) {
+            console.log(b[0]);
+        }
+        abc("nodejs", "hello", 1);
     </script>
 </body>
 
