--- a/Nodejs/PJ_chat/node/index.html
+++ b/Nodejs/PJ_chat/node/index.html
@@ -65,7 +65,23 @@
         var socket = io();
 
         socket.on("server message", function(data) {
-            $("#chatLog").append("<li> " + data.message + " </li>");
+            $("#chatLog").append(
+                "<li> " + data.username + " :" + data.message + " </li>"
+            );
+        });
+
+        socket.on("join", function(data) {
+            console.log(data);
+            $("#chatLog").append(
+                "<li> " + data.username + "님이 방을 들어왔습니다.</li>"
+            );
+        });
+
+        socket.on("leave", function(data) {
+            console.log(data);
+            $("#chatLog").append(
+                "<li> " + data.username + "님이 방을 나갔습니다.</li>"
+            );
         });
 
         $(document).ready(function() {
